# OOP_mai3

./: CMakeLists.txt  Figure.cpp  Figure.h  README.md  dont_look.txt  main.cpp  tests.cpp
